--- a/templates/pastey/list.html
+++ b/templates/pastey/list.html
@@ -95,7 +95,10 @@
 		        
                 <!--Code snippet-->
                 <style>{{css_style}}</style>
-                {{paste.code_paste|safe}}
+                 <!--Formatted text-->
+                <div id="list_code">            
+                    {{paste.code_paste|safe}}
+                </div>  
                 
                 <!--Add some space between this paste and the next-->
 				<br />
