Configured for MySQL, and a minor CSS fix

--- a/templates/pastey/html.html
+++ b/templates/pastey/html.html
@@ -4,6 +4,11 @@
         background-color: #FFF;
         color: #000;
     }
+    table{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+    }
 </style>
 
 <pre>{{code|safe}}</pre>
