style chooser box auto submits

--- a/templates/pastey/base.html
+++ b/templates/pastey/base.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/main.css" />
         <title>{% block title %}PyPastebin{% endblock %}</title>
         <style  type="text/css">{% block style %}{% endblock %}</style>
+        <script type="text/javascript" language="Javascript" src="{{STATIC_URL}}js/jquery.js"></script>
+        {% block script %}{% endblock %}
     </head>
 
     <body>
